# git-internals-workshop

./: .gitignore  .gitmodules  .travis.yml  Main.hs  Presentation.ipynb  README.md  git-internals-workshop.cabal  index.html  stack.yaml
.ci/: update_pages.sh
app/: Main.hs
content/commits/: step3.txt  step4.txt
content/scripts/: resolve_ref.py
content/step0/: commit.txt
content/step0/tree/tools/: ResolveRef.hs  resolve_ref.py
content/step1/: commit.txt
content/step1/tree/tools/: ResolveRef.hs  ShowObject.hs  resolve_ref.py  show_object.py
content/step2/: commit.txt
content/step2/tree/tools/: ResolveRef.hs  ShowObject.hs  resolve_ref.py  show_object.py
content/step3/: commit.txt
content/step3/tree/tools/: ShowObject.hs  show_object.py
content/step4/: commit.txt
content/step4/tree/tools/: ShowObject.hs  show_object.py
content/step5/: commit.txt  tag.txt
content/step5/tree/tools/: ShowObject.hs  show_object.py  unpack.sh
presentation/: presentation.md
