name:                git-internals-workshop
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vaibhavsagar/git-internals-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2016 Vaibhav Sagar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable git-internals-workshop-build
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , directory
                     , filepath
                     , duffer
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/git-internals-workshop
